--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-<html>
-  <body>
-    Coming sooner than you think.
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>EarlyValentines</title>
+  <link rel="icon" type="image/png" href="/build/images/fav.png" />
+
+  <link rel="stylesheet" href="/build/main.css">
+  <script src="/build/main.js"></script>
+</head>
+<body>
+  <main>
+    <img id="logo" src="/build/images/logo.png" alt="Logo" />
+    <!--<div class="max-w-6xl mx-auto px-4">
+    <div class="flex items-stretch items-center p-2 justify-center">
+      <button><a href="#">About</a></button>
+      <button><a href="#">Mint</a></button>
+      <button><a href="#">Burn</a></button>
+    </div>
+    </div>-->
+
+    <div id="minting-dapp"></div>
+  </main>
+</body>
 </html>
