--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <body>
   <main>
     <img id="logo" src="/build/images/logo.png" alt="Logo" />
+    
+    <noscript>
+      <p>Unfortunately, <strong>Javascript</script> is disabled so you won't be able to use this Web3 DApp.
+        Please enable or switch to a modern browser.</p>
+    </noscript>
+    
     <!--<div class="max-w-6xl mx-auto px-4">
     <div class="flex items-stretch items-center p-2 justify-center">
       <button><a href="#">About</a></button>
