--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <img id="logo" src="/build/images/logo.png" alt="Logo" />
     
     <noscript>
-      <p>Unfortunately, <strong>Javascript</script> is disabled so you won't be able to use this Web3 DApp.
-        Please enable or switch to a modern browser.</p>
+      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+        Unfortunately, <strong>Javascript</script> is disabled so you won't be able to use this Web3 DApp.
+        <br/>
+        Please enable or switch to a modern browser.
+      </div>
     </noscript>
     
     <!--<div class="max-w-6xl mx-auto px-4">
