--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <img id="logo" src="/build/images/logo.png" alt="Logo" />
     
     <noscript>
-      <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
-        Unfortunately, <strong>Javascript</script> is disabled so you won't be able to use this Web3 DApp.
+      <div style="background:#aa2222;color:white;padding:4em;margin:2em;text-align:center;" role="alert">
+        <strong>Javascript</strong> is disabled so this DApp won't work.
         <br/>
-        Please enable or switch to a modern browser.
+        Please enable it or switch to a modern browser.
       </div>
     </noscript>
     
