--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 <body>
   <main>
+    <div style="display:inline;position:absolute;top:0;right:0;">
+      <span style="margin:1em;">
+      <a href="https://opensea.io/collection/earlyvalentines"><img src="/build/images/opensea.png" width="30em" title="OpenSea" alt="OpenSea" /></a>
+      </span>
+      <span style="margin:1em;">
+      <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68"><img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" /></a>
+      </span>
+    </div>
+
     <img id="logo" src="/build/images/logo.png" alt="Logo" />
     
     <noscript>
@@ -22,14 +31,6 @@
         Please enable it or switch to a modern browser.
       </div>
     </noscript>
-    
-    <!--<div class="max-w-6xl mx-auto px-4">
-    <div class="flex items-stretch items-center p-2 justify-center">
-      <button><a href="#">About</a></button>
-      <button><a href="#">Mint</a></button>
-      <button><a href="#">Burn</a></button>
-    </div>
-    </div>-->
 
     <div id="minting-dapp"></div>
   </main>
