--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
 </head>
 <body>
   <main>
-    <div style="display:inline;position:absolute;top:0;right:0;">
-      <span style="margin:1em;">
-      <a href="https://opensea.io/collection/earlyvalentines"><img src="/build/images/opensea.png" width="30em" title="OpenSea" alt="OpenSea" /></a>
-      </span>
-      <span style="margin:1em;">
-      <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68"><img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" /></a>
-      </span>
-    </div>
-
     <img id="logo" src="/build/images/logo.png" alt="Logo" />
+
+    <ul style="display:flex;justify-content:center;align-items: center;">
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <a href="https://twitter.com/EarlyValentines"><img src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" /></a>
+      </li>
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <a href="https://discord.com/invite/p7mPduQ7HD"><img src="/build/images/discord.png" width="30em" title="Discord" alt="Discord" /></a>
+      </li>
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <a href="https://opensea.io/collection/earlyvalentines"><img src="/build/images/opensea.png" width="30em" title="OpenSea" alt="OpenSea" /></a>
+      </li>
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68"><img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" /></a>
+      </li>
+    </ul>
     
     <noscript>
-      <div style="background:#aa2222;color:white;padding:4em;margin:2em;text-align:center;" role="alert">
+      <div style="background:#aa2222;color:white;padding:4em;margin:2em 10em;text-align:center;border-radius:1em;" role="alert">
         <strong>Javascript</strong> is disabled so this DApp won't work.
         <br/>
         Please enable it or switch to a modern browser.
