--- a/index.html
+++ b/index.html
@@ -17,16 +17,24 @@
 
     <ul style="display:flex;justify-content:center;align-items: center;">
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
-      <a href="https://twitter.com/EarlyValentines"><img src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" /></a>
+        <a href="https://twitter.com/EarlyValentines/" target="_blank">
+        <img src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
+        </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
-      <a href="https://discord.com/invite/p7mPduQ7HD"><img src="/build/images/discord.png" width="30em" title="Discord" alt="Discord" /></a>
+        <a href="https://discord.com/invite/p7mPduQ7HD/" target="_blank">
+        <img src="/build/images/discord.png" width="30em" title="Discord" alt="Discord" />
+        </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
-      <a href="https://opensea.io/collection/earlyvalentines"><img src="/build/images/opensea.png" width="30em" title="OpenSea" alt="OpenSea" /></a>
+        <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
+        <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
+        </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
-      <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68"><img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" /></a>
+        <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68/" target="_blank">
+        <img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" />
+        </a>
       </li>
     </ul>
     
