--- a/index.html
+++ b/index.html
@@ -51,21 +51,26 @@
       <h1>Details</h1>
       <br/>
       <ul>
-        <li>There are a <strong>total of 362 Items</strong>, split into <emph>Phases</emph>.</li>
+        <li>There are a <strong>total of 362 Items</strong>, split into <strong>2 <emph>Phases</emph></strong>.</li>
+        <li>Initial Minter	s can pick the Message before reveal.</li>
         <li><strong>10%</strong> of the Items will be <strong>reserved</strong> per <emph>Phase</emph>.</li>
-        <li>The <strong>last</strong> Item being a guaranteed <strong>Unique</strong>.</li>
+        <li><strong>Last</strong> Items being a guaranteed <strong>Unique</strong>.</li>
       </ul>
     </div>
     <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
       <h1>Community</h1>
       <br/>
-      Per our community request, we skipped <emph>Whitelists</emph> and <a href="https://etherscan.io/address/0x731d6c6ef47e62ae0e61f51fe21ec5a513d75c68">verified our <emph>Contract</emph> on EtherScan.io</a>. This is discouraged as snipers can find the rarer items before mint but, in our case, the last ones are Unique.
-    </div>f
+      Per our community request, we skipped <emph>Whitelists</emph> and <a href="https://etherscan.io/address/0x731d6c6ef47e62ae0e61f51fe21ec5a513d75c68">verified our <emph>Contract</emph> on EtherScan.io</a>. This is discouraged as snipers can find the rarer items before mint but you know it's the last.
+    </div>
     <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
       <h1>Mint</h1>
       <br/>
       <a href="/mint.html">To mint, simply press here</a> or the first item after the Logo and follow the instructions.
-      All links to our Collection in various Social Platforms and Marketplaces follow.
+      You will find links to our Collection in various Social Platforms and Marketplaces afterwards.
+    </div>
+    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
+      Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
+
     </div>
   </main>
 </body>
