--- a/index.html
+++ b/index.html
@@ -36,37 +36,43 @@
         </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+        <a href="https://rarible.com/earlyvalentines/" target="_blank">
+        <img src="/build/images/rarible.svg" width="30em" title="Rarible" alt="Rarible" />
+        </a>
+      </li>
+      <!--
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
         <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68/" target="_blank">
         <img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" />
         </a>
       </li>
+      -->
     </ul>
     
-    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
-      <h1>About</h1>
+    <div style="background:white;color:black;padding:2em;margin:1em 10%;text-align:center;border-radius:.5em;">
+      <p>
+      Welcome to EarlyValentines, a lovely Ethereum Collection that gives you
       <br/>
-      Welcome to <strong>EarlyValentines</strong>, an Ethereum Collection that will give you first place in line for future mints as well as access to <emph>alpha versions</emph> of any <strong>apps/games</strong> among other <strong>perks</strong>. <a href="https://opensea.io/assets/0x731d6c6ef47e62ae0e61f51fe21ec5a513d75c68/1">The first Item</a> is a revealed Unique to show what to expect.
-    </div>
-    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
-      <h1>Details</h1>
+      <strong>whitelists</strong> for our future projects, among other <strong>perks</strong>.
+      </p>
+      <br/>
+      <img style="display:inline;padding-bottom:1em;" src="/build/images/phase1.gif" width="120em" alt="Details" />
+      <img style="display:inline;padding-bottom:1em;" src="/build/images/phase2.gif" width="120em" alt="Details" />
       <br/>
       <ul>
         <li>There are a <strong>total of 362 Items</strong>, split into <strong>2 <emph>Phases</emph></strong>.</li>
         <li>Initial Minters can pick the Message before reveal.</li>
-        <li><strong>10%</strong> of the Items will be <strong>reserved</strong> per <emph>Phase</emph>.</li>
-        <li><strong>Last</strong> Items being a guaranteed <strong>Unique</strong>.</li>
+        <li>Some Items will be <strong>reserved</strong> for giveaways.</li>
       </ul>
-    </div>
-    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
-      <h1>Community</h1>
       <br/>
-      Per our community request, we skipped <emph>Whitelists</emph> and <a href="https://etherscan.io/address/0x731d6c6ef47e62ae0e61f51fe21ec5a513d75c68">verified our <emph>Contract</emph> on EtherScan.io</a>. This is discouraged as snipers can find the rarer items before mint but you know it's the last.
-    </div>
-    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
-      <h1>Mint</h1>
+      <a href="/mint.html">
+      <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" width="60em" alt="Mint" />
+      </a>
+      <p>
+      To mint, simply press the first button in the <a href="#">upper taskbar</a>.
       <br/>
-      <a href="/mint.html">To mint, simply press here</a> or the first item after the Logo and follow the instructions.
-      You will find links to our Collection in various Social Platforms and Marketplaces afterwards.
+      You will also find buttons for Social Platforms as well as Marketplaces there.
+      </p>
     </div>
     <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
       Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
