--- a/mint.html
+++ b/mint.html
@@ -18,7 +18,7 @@
     <ul style="display:flex;justify-content:center;align-items: center;">
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
         <a href="/">
-        <img src="/build/images/fav.png" width="30em" title="Home" alt="Home" />
+        <img src="/build/images/icon.png" width="30em" title="Home" alt="Home" />
         </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
@@ -37,14 +37,21 @@
         </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+        <a href="https://rarible.com/earlyvalentines/" target="_blank">
+        <img src="/build/images/rarible.svg" width="30em" title="LooksRare" alt="LooksRare" />
+        </a>
+      </li>
+      <!--
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
         <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68/" target="_blank">
         <img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" />
         </a>
       </li>
+      -->
     </ul>
     
     <noscript>
-      <div style="background:#aa2222;color:white;padding:4em;margin:2em 10em;text-align:center;border-radius:1em;" role="alert">
+      <div style="background:#aa2222;color:white;padding:4em;margin:2em 10%;text-align:center;border-radius:.5em;" role="alert">
         <strong>Javascript</strong> is disabled so this DApp won't work.
         <br/>
         Please enable it or switch to a modern browser.
