--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         </a>
       </li>
       <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+        <a href="/game.html">
+        <img src="/build/images/game.png" width="30em" title="Game" alt="Game" />
+        </a>
+      </li>
+      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
         <a href="https://twitter.com/EarlyValentines/" target="_blank">
         <img src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
         </a>
@@ -76,7 +81,6 @@
     </div>
     <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
       Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
-
     </div>
   </main>
 </body>
