--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="/build/main.css">
   
-  <script src="https://cdn.ethers.io/lib/ethers-5.6.umd.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/game/ethers-5.6.umd.min.js"></script>
   <script type="text/javascript" src="/game/abi.js"></script>
   <script type="text/javascript" src="/game/game.js"></script>
 </head>
@@ -62,9 +62,11 @@
     </noscript>
     
     <div id="instructions" style="display:none;">
-    You need an <a href="/mint.html"><strong>EarlyValentine</strong></a> to play! Press to play the Trailer/Enable the keyboard.
+    Having <a href="/mint.html"><strong>EarlyValentines</strong></a> will give you Continues.<br/>
+    Press to play the Trailer/Enable the keyboard.
     <br/>
-      <button onclick="connect();">Check Wallet</button>
+      <button onclick="show(false);">Watch Trailer</button>
+      <button onclick="connect();">Play (Checks Wallet)</button>
       <div id="status"></div>
     </div>
 
@@ -74,7 +76,7 @@
       Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
     </div>
     
-    <script>show();</script>
+    <script>show(false);</script>
   </main>
 </body>
 </html>
