--- a/game/HeartBeats.html
+++ b/game/HeartBeats.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
 	<title>HeartBeats</title>
 	<style type='text/css'>
 
@@ -112,6 +111,8 @@
 			visibility: visible;
 		}
 	</style>
+<link id='-gd-engine-icon' rel='icon' type='image/png' href='HeartBeats.icon.png' />
+<link rel='apple-touch-icon' href='HeartBeats.apple-touch-icon.png'/>
 
 </head>
 <body>
@@ -137,7 +138,7 @@
 	<script type='text/javascript' src='HeartBeats.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
-		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"HeartBeats","experimentalVK":false,"fileSizes":{"HeartBeats.pck":15533312,"HeartBeats.wasm":18140456},"gdnativeLibs":[]};
+		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"HeartBeats","experimentalVK":false,"fileSizes":{"HeartBeats.pck":15625648,"HeartBeats.wasm":17503191},"focusCanvas":true,"gdnativeLibs":[]};
 		var engine = new Engine(GODOT_CONFIG);
 
 		(function() {
