--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       You will also find buttons for Social Platforms as well as Marketplaces there.
       </p>
     </div>
-    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
+    <div style="background:white;color:black;padding:2em;margin:2em 20%;text-align:center;border-radius:.5em;">
       Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
     </div>
   </main>
