--- a/mint.html
+++ b/mint.html
@@ -59,6 +59,10 @@
     </noscript>
 
     <div id="minting-dapp"></div>
+    
+    <div style="background:white;color:black;padding:2em;margin:2em 20%;text-align:center;border-radius:.5em;">
+      Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
+    </div>
   </main>
 </body>
 </html>
