--- a/game.html
+++ b/game.html
@@ -72,7 +72,7 @@
 
     <div id="content" style="display:none;"></div>
     
-    <div style="background:white;color:black;padding:2em;margin:2em 10em;text-align:center;border-radius:.5em;">
+    <div style="background:white;color:black;padding:2em;margin:2em 20%;text-align:center;border-radius:.5em;">
       Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
     </div>
     
