--- a/game.html
+++ b/game.html
@@ -66,7 +66,8 @@
     Press to play the Trailer/Enable the keyboard.
     <br/>
       <button onclick="show(false);">Watch Trailer</button>
-      <button onclick="connect();">Play (Checks Wallet)</button>
+      <button onclick="show(true);">Play</button>
+      <button onclick="connect();">Play (with continues)</button>
       <div id="status"></div>
     </div>
 
