--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </p>
     </div>
     <div style="background:white;color:black;padding:2em;margin:2em 20%;text-align:center;border-radius:.5em;">
-      Copyright © 2022 <a href="#">EarlyValentines</a>. All rights Reserved.
+      Copyright © 2022 <a href="#">MyValentines</a>. All rights Reserved.
     </div>
   </main>
 </body>
