--- a/index.html
+++ b/index.html
@@ -25,39 +25,39 @@
   <main>
     <img id="logo" src="/build/images/logo.png" alt="Logo" />
 
-    <ul style="display:flex;justify-content:center;align-items:center;">
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+    <ul class="menu">
+      <li>
         <a href="/mint.html">
         <img src="/build/images/mint.png" width="30em" title="Mint" alt="Mint" />
         </a>
       </li>
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <li>
         <a href="/game.html">
         <img src="/build/images/game.png" width="30em" title="Game" alt="Game" />
         </a>
       </li>
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <li>
         <a href="https://twitter.com/EarlyValentines/" target="_blank">
         <img src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
         </a>
       </li>
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <li>
         <a href="https://discord.com/invite/p7mPduQ7HD/" target="_blank">
         <img src="/build/images/discord.png" width="30em" title="Discord" alt="Discord" />
         </a>
       </li>
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <li>
         <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
         <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
         </a>
       </li>
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <li>
         <a href="https://rarible.com/earlyvalentines/" target="_blank">
         <img src="/build/images/rarible.svg" width="30em" title="Rarible" alt="Rarible" />
         </a>
       </li>
       <!--
-      <li style="flex:1 1 1;margin:1em 1em 1em 0;">
+      <li>
         <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68/" target="_blank">
         <img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" />
         </a>
