--- a/game.html
+++ b/game.html
@@ -41,11 +41,6 @@
         </a>
       </li>
       <li>
-        <a href="https://discord.com/invite/p7mPduQ7HD/" target="_blank">
-        <img src="/build/images/discord.png" width="30em" title="Discord" alt="Discord" />
-        </a>
-      </li>
-      <li>
         <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
         <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
         </a>
@@ -55,13 +50,6 @@
         <img src="/build/images/rarible.svg" width="30em" title="LooksRare" alt="LooksRare" />
         </a>
       </li>
-      <!--
-      <li>
-        <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68/" target="_blank">
-        <img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" />
-        </a>
-      </li>
-      -->
     </ul>
     
     <noscript>
@@ -77,8 +65,8 @@
     Press to play the Trailer/Enable the keyboard.
     <br/>
       <button onclick="show(false);">Watch Trailer</button>
-      <button onclick="show(true);">Play</button>
-      <button onclick="connect();">Play (with continues)</button>
+      <!--<button onclick="show(true);">Play</button>-->
+      <button onclick="connect();">Play (checks wallet)</button>
       <div id="status"></div>
     </div>
 
