--- a/index.html
+++ b/index.html
@@ -42,11 +42,6 @@
         </a>
       </li>
       <li>
-        <a href="https://discord.com/invite/p7mPduQ7HD/" target="_blank">
-        <img src="/build/images/discord.png" width="30em" title="Discord" alt="Discord" />
-        </a>
-      </li>
-      <li>
         <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
         <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
         </a>
@@ -67,27 +62,27 @@
     
     <div class="panel">
       <p>
-      Welcome to EarlyValentines, a Collection of Hearts with lovely Messages.
+      Welcome to EarlyValentines, a Collection of Items with custom Messages.
       <br/>
-      They will also give you <strong>whitelists</strong> for our future projects, among other <strong>perks</strong>.
+      Assign one for the Item to beat with your eternal feelings.
+
       </p>
       <br/>
       <img style="display:inline;padding-bottom:1em;" src="/build/images/phase1.gif" width="120em" alt="Details" />
       <img style="display:inline;padding-bottom:1em;" src="/build/images/phase2.gif" width="120em" alt="Details" />
       <br/>
       <ul>
-        <li>There are a <strong>total of 362 Items</strong>, split into <strong>2 <emph>Phases</emph></strong>.</li>
-        <li>Initial Minters will get to pick the Message before reveal.</li>
-        <li>Some Items will be <strong>reserved</strong> for giveaways.</li>
+        <li>The <strong>total</strong> will be used to control maximum Mints.</li>
+        <li>Some Items are <strong>reserved</strong> for giveaways.</li>
       </ul>
       <br/>
       <a href="/mint.html">
       <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" width="60em" alt="Mint" />
       </a>
       <p>
-      To mint, simply press the first button in the <a href="#">upper taskbar</a>.
+      To mint, simply press the first button in the <a href="#">upper taskbar</a>,
       <br/>
-      You will also find buttons for Social Platforms as well as supported Marketplaces there.
+      along with our Game, Twitter and supported Marketplaces.
       </p>
     </div>
     <div class="tight panel">
