--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p>
       To mint, simply press the first button in the <a href="#">upper taskbar</a>,
       <br/>
-      along with our Game, Twitter and supported Marketplaces.
+      next to our Game, Twitter and supported Marketplaces.
       </p>
     </div>
     <div class="tight panel">
