--- a/index.html
+++ b/index.html
@@ -51,13 +51,6 @@
         <img src="/build/images/rarible.svg" width="30em" title="Rarible" alt="Rarible" />
         </a>
       </li>
-      <!--
-      <li>
-        <a href="https://looksrare.org/collections/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68/" target="_blank">
-        <img src="/build/images/looksrare.png" width="30em" title="LooksRare" alt="LooksRare" />
-        </a>
-      </li>
-      -->
     </ul>
     
     <div class="panel">
@@ -85,6 +78,11 @@
       next to our Game, Twitter and supported Marketplaces.
       </p>
     </div>
+
+    <div class="panel">
+      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=938s"><strong>Goblinate!</strong></a>
+    </div>
+    
     <div class="tight panel">
       Copyright © 2022 <a href="https://myvalentines-theta.vercel.app">MyValentines</a>. All rights Reserved.
     </div>
