--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
     </div>
 
     <div class="panel">
-      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=938s"><strong>Goblinate!</strong></a>
+      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=938s">
+        A lovely collection for those tired of Goblins <strong>goblinating</strong> everything.
+      </a>
     </div>
     
     <div class="tight panel">
