--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     </div>
 
     <div class="panel">
-      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=938s">
-        A lovely collection for those tired of Goblins <strong>goblinating</strong> everything.
+      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=939s">
+        A lovely collection for those tired of Goblins <strong>goblinating</strong> everything. (NSFW)
       </a>
     </div>
     
