--- a/game.html
+++ b/game.html
@@ -38,12 +38,17 @@
       </li>
       <li>
         <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
+        <img src="/build/images/x2y2.png"  width="30em" title="X2Y2" alt="X2Y2" />
+        </a>
+      </li>
+      <li>
+        <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
         <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
         </a>
       </li>
       <li>
         <a href="https://rarible.com/earlyvalentines/" target="_blank">
-        <img src="/build/images/rarible.svg" width="30em" title="LooksRare" alt="LooksRare" />
+        <img src="/build/images/rarible.svg" width="30em" title="Rarible" alt="Rarible" />
         </a>
       </li>
     </ul>
