--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         </a>
       </li>
       <li>
+        <a href="https://x2y2.io/collection/earlyvalentines/items" target="_blank">
+        <img src="/build/images/x2y2.png"  width="30em" title="X2Y2" alt="X2Y2" />
+        </a>
+      </li>
+      <li>
         <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
         <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
         </a>
