--- a/mint.html
+++ b/mint.html
@@ -12,10 +12,11 @@
     body{background:maroon;color:white;}
     img{vertical-align:middle;}
     
-    .panel{background:white;color:black;padding:2em;margin:2em 10%;text-align:center;border-radius:.5em;}
+    .panel{background:white;color:black;padding:2em;margin:0 10%;text-align:center;border-radius:.5em;}
     .tight{margin:2em 20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
     
+    .menu{margin-bottom:-.5em;}
     ul.menu{display:flex;justify-content:center;align-items: center;}
     ul.menu li{flex:1 1 1;margin:1em 1em 1em 0;}
   </style>
