--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         </a>
       </li>
       <li>
+        <a href="/write.html">
+        <img src="/build/images/write.png" width="30em" title="Write" alt="Write" />
+        </a>
+      </li>
+      <li>
         <a href="/game.html">
         <img src="/build/images/game.png" width="30em" title="Play" alt="Play" />
         </a>
