--- a/game/HeartBeats.html
+++ b/game/HeartBeats.html
@@ -113,7 +113,7 @@
 	</style>
 <link id='-gd-engine-icon' rel='icon' type='image/png' href='HeartBeats.icon.png' />
 <link rel='apple-touch-icon' href='HeartBeats.apple-touch-icon.png'/>
-<script type="text/javascript" src="ethers-5.6.umd.min.js"></script>
+<script type="text/javascript" src="../build/ethers-5.6.umd.min.js"></script>
 <script>
 var proxy = {
 "getAddress": async function getAddress(callback) {
