--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="/build/images/fav.png" />
 
   <style>
-    body{background:maroon;color:white;}
+    body{background:maroon;color:black;}
     img{vertical-align:middle;}
     
     .panel{background:white;color:black;padding:2em;margin:0 10%;text-align:center;border-radius:.5em;}
@@ -72,6 +72,15 @@
       <strong>Mint</strong> yours before they run out!
       <br/>
       Dynamic NFTs/Total.
+      </p>
+      <br/>
+      <a href="/write.html">
+        <img style="display:inline;padding-bottom:1em;" src="/build/images/write.png" width="60em" alt="Write" />
+      </a>
+      <p>
+      Write a <strong>Message</strong> on your <strong>EVs</strong>.
+      <br/>
+      Under Construction, try the Demo out.
       </p>
       <br/>
       <a href="/game.html">
