--- a/write.html
+++ b/write.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="build/images/write.png" />
 
   <style>
-    body{background:plum;color:red;}
+    body{background:maroon;color:black;}
     img{vertical-align:middle;}
     
     .panel{background:white;color:black;padding:2em;margin:0 10%;text-align:center;border-radius:.5em;}
