--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     body{background:maroon;color:black;}
     img{vertical-align:middle;}
     
-    .panel{background:white;color:black;padding:2em;margin:0 10%;text-align:center;border-radius:.5em;}
-    .tight{margin:2em 20%;}
+    .panel{background:white;color:black;padding:2em;margin:1% 10%;text-align:center;border-radius:.5em;}
+    .panel:first-item{margin:0 10%;}
+    .tight{margin-left:20%;margin-right:20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
     
     .menu{margin-bottom:.5em;}
-    ul.menu{display:flex;justify-content:center;align-items: center;}
+    ul.menu{display:flex;justify-content:center;align-items: center;list-style:none;}
     ul.menu li{flex:1 1 1;margin:1em 1em 1em 0;}
   </style>
   <link rel="stylesheet" href="/build/main.css">
