--- a/write.html
+++ b/write.html
@@ -103,7 +103,7 @@
     </div>
     
     <div class="panel">
-      <div>♡🤍💛❤️💙💚🧡💜🖤♥ 💖💓💞💝💔💗💘 💌😘😍🥰❣💋</div>
+      <div>♡🤍💛🧡❤️💚💙💜🤎🖤♥ 💖💓💞💝💔💗💘 💌😘😍🥰❣💋</div>
       <div>Courtesy of the <a href="https://unicode-table.com/en/">Unicode Character Table</a></div>
     </div>
     
