--- a/index.html
+++ b/index.html
@@ -70,25 +70,27 @@
         <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" width="60em" alt="Mint" />
       </a>
       <p>
-      <strong>Mint</strong> yours before they run out!
+      <strong>Mint</strong> yours now!
       <br/>
-      Dynamic NFTs/Total.
+      Dynamic NFTs/Collection
       </p>
       <br/>
       <a href="/write.html">
         <img style="display:inline;padding-bottom:1em;" src="/build/images/write.png" width="60em" alt="Write" />
       </a>
       <p>
-      Write a <strong>Message</strong> on your <strong>EVs</strong>.
+      Write a <strong>Message</strong> on your <strong>EV(s)</strong>
       <br/>
-      Under Construction, try the Demo out.
+      ( Currently Manual )
       </p>
       <br/>
       <a href="/game.html">
       <img style="display:inline;padding-bottom:1em;" src="/build/images/game.png" width="60em" alt="Play" />
       </a>
       <p>
-      <strong>Play HeartBeats</strong>, our free game, here.
+      <strong>Play</strong> <emph>HeartBeats</emph>
+      <br/>
+      1 EV = 1 Continue
       </p>
     </div>
 
