--- a/write.html
+++ b/write.html
@@ -111,7 +111,7 @@
       <div>♡🤍💛🧡❤️💚💙💜🤎🖤♥ 💖💓💞💝💔💗💘 💌😘😍🥰❣💋</div>
       <div>Courtesy of the <a href="https://unicode-table.com/en/">Unicode Character Table</a></div>
       <br />
-      You can edit your EV(s) once a month, the process being manual.
+      You can edit your EV(s) once a month, the process is manual for now.
     </div>
     
     <div class="tight panel">
