--- a/details.html
+++ b/details.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <main>
-    <a href="#"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
+    <a href="/"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
 
     <ul class="menu">
       <li>
@@ -70,34 +70,24 @@
         <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" width="60em" alt="Mint" />
       </a>
       <p>
-      <strong>Mint</strong> yours now!
-      <br/>
-      All animated, <a href="/details.html">check the details.</a>
-      </p>
-      <br/>
-      <a href="/write.html">
-        <img style="display:inline;padding-bottom:1em;" src="/build/images/write.png" width="60em" alt="Write" />
-      </a>
-      <p>
-      Write a <strong>Message</strong> on your <strong>EV(s)</strong>
-      <br/>
-      It's free! (once per Month)
-      </p>
-      <br/>
-      <a href="/game.html">
-      <img style="display:inline;padding-bottom:1em;" src="/build/images/game.png" width="60em" alt="Play" />
-      </a>
-      <p>
-      <strong>Play</strong> <emph>HeartBeats</emph>
-      <br/>
-      1 EV = 1 Continue
+        Total: <strong>2500</strong>
+        <br />
+        Cost: <strong>0.05<abbr title="Ethereum">Ξ</abbr></strong> until 1000, then <strong>0.1<abbr title="Ethereum">Ξ</abbr></strong>.
       </p>
     </div>
 
     <div class="panel">
-      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=939s">
-        A lovely collection for those tired of Goblins <strong>goblinating</strong> everything. (NSFW)
-      </a>
+      <img style="margin:auto;" src="build/images/unusual.png"></img>
+      <strong>Unusual</strong>: 4 shapes, <strong>1.92%</strong> of Rarity.
+      <br />
+      One every <strong>50+</strong> mints.
+    </div>
+
+    <div class="panel">
+      <img style="margin:auto;" src="build/images/unique.png"></img>
+      <strong>Unique</strong>: 3 animations, <strong>0.12%</strong> of Rarity.
+      <br />
+      One every <strong>500+</strong> mints.
     </div>
     
     <div class="tight panel">
