--- a/details.html
+++ b/details.html
@@ -80,14 +80,14 @@
       <img style="margin:auto;" src="build/images/unusual.png"></img>
       <strong>Unusual</strong>: 4 shapes, <strong>1.92%</strong> of Rarity.
       <br />
-      One every <strong>50+</strong> mints.
+      Hint: Every <strong>50+</strong> mints.
     </div>
 
     <div class="panel">
       <img style="margin:auto;" src="build/images/unique.png"></img>
       <strong>Unique</strong>: 3 animations, <strong>0.12%</strong> of Rarity.
       <br />
-      One every <strong>500+</strong> mints.
+      Hint: <strong>500+</strong>, <strong>1000+</strong>, <strong>2000+</strong>.
     </div>
     
     <div class="tight panel">
