--- a/details.html
+++ b/details.html
@@ -80,7 +80,7 @@
       <img style="margin:auto;" src="build/images/unusual.png"></img>
       <strong>Unusual</strong>: 4 shapes, <strong>1.92%</strong> of Rarity.
       <br />
-      Hint: Every <strong>50+</strong> mints.
+      Hint: Every <strong>50+</strong> mints save for special cases in the beginning and the end.
     </div>
 
     <div class="panel">
