--- a/details.html
+++ b/details.html
@@ -73,6 +73,8 @@
         Total: <strong>2500</strong>
         <br />
         Cost: <strong>0.05<abbr title="Ethereum">Ξ</abbr></strong> until 1000, then <strong>0.1<abbr title="Ethereum">Ξ</abbr></strong>.
+        <br />
+        No more than 10% will be reserved.
       </p>
     </div>
 
@@ -80,7 +82,7 @@
       <img style="margin:auto;" src="build/images/unusual.png"></img>
       <strong>Unusual</strong>: 4 shapes, <strong>1.92%</strong> of Rarity.
       <br />
-      Hint: Every <strong>50+</strong> mints save for special cases in the beginning and the end.
+      Hint: Every <strong>50+</strong> mints save for special cases.
     </div>
 
     <div class="panel">
