--- a/write.html
+++ b/write.html
@@ -111,7 +111,9 @@
       <div>♡🤍💛🧡❤️💚💙💜🤎🖤♥ 💖💓💞💝💔💗💘 💌😘😍🥰❣💋</div>
       <div>Courtesy of the <a href="https://unicode-table.com/en/">Unicode Character Table</a></div>
       <br />
-      You can edit your EV(s) once a month, the process is manual for now.
+      <div>You can edit your EV(s) once a month.</div>
+      <br />
+      <div><a href="https://www.youtube.com/watch?v=6wJXBUfcIOE">Don't curse, m'kay? (NSFW)</a></div>
     </div>
     
     <div class="tight panel">
