--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
       </li>
       <li>
-        <a href="/write.html">
+        <a href="https://myvalentine.neocities.org/write.html">
         <img src="/build/images/write.png" width="30em" title="Write" alt="Write" />
         </a>
       </li>
