--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       All animated, <a href="/details.html">check the details.</a>
       </p>
       <br/>
-      <a href="/write.html">
+      <a href="https://myvalentine.neocities.org/write.html">
         <img style="display:inline;padding-bottom:1em;" src="/build/images/write.png" width="60em" alt="Write" />
       </a>
       <p>
